--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,63 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.btn {
+  width: 100px;
+  height: 80px;
+
+  font-size: 24px;
+
+  border: none;
+  border-radius: 4px;
+}
+
+.timer {
+  margin-top: 30px;
+
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.field:first-child {
+  width: 100px;
+}
+
+.field {
+  width: 80px;
+  height: 130px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+  background-color: #212121;
+
+  border-radius: 4px;
+  box-shadow: 0px 0px 26px 1px rgba(102, 79, 79, 1);
+}
+
+.value {
+  font-size: 56px;
+  font-weight: 500;
+  text-decoration: underline;
+  color: #faf8f8;
+}
+
+.label {
+  color: #faf8f8;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+}
