--- a/src/css/common.css
+++ b/src/css/common.css
@@ -76,3 +76,46 @@ img {
   display: flex;
   justify-content: center;
 }
+
+/* таймер по репете*/
+
+.wrapper {
+  width: 80px;
+  height: 130px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+  background-color: #212121;
+
+  border-radius: 4px;
+  box-shadow: 0px 0px 26px 1px rgba(102, 79, 79, 1);
+}
+
+.actions {
+  margin-top: 30px;
+
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
+
+.time-btn {
+  width: 90px;
+  height: 30px;
+
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  text-transform: uppercase;
+  border: 0;
+  background-color: #c91d1d;
+  color: #ffffff;
+}
+
+.time-btn:hover {
+  background-color: #2196f3;
+}
